Adding new functions and few other fixes

--- a/inst/REFERENCES.bib
+++ b/inst/REFERENCES.bib
@@ -263,3 +263,28 @@ address = {San Francisco, CA, USA}
     publisher = {MIT Press},
     address = {Cambridge, MA, USA},
 }
+
+@article{griewank1981generalized,
+  title={Generalized descent for global optimization},
+  author={Griewank, Andreas O},
+  journal={Journal of optimization theory and applications},
+  volume={34},
+  number={1},
+  pages={11--39},
+  year={1981},
+  publisher={Springer}
+}
+
+@article{Grippo1989,
+  doi = {10.1007/bf00940345},
+  url = {https://doi.org/10.1007/bf00940345},
+  year = {1989},
+  month = mar,
+  publisher = {Springer Science and Business Media {LLC}},
+  volume = {60},
+  number = {3},
+  pages = {401--419},
+  author = {L. Grippo and F. Lampariello and S. Lucidi},
+  title = {A truncated Newton method with nonmonotone line search for unconstrained optimization},
+  journal = {Journal of Optimization Theory and Applications}
+}
