--- a/inst/REFERENCES.bib
+++ b/inst/REFERENCES.bib
@@ -226,8 +226,8 @@ address = {San Francisco, CA, USA}
 
 @Book{rao2019engineering,
  author = {Rao, Singiresu},
- title = {Engineering optimization : theory and practice},
- publisher = {John Wiley \& Sons, Ltd},
+ title = {Engineering optimization: theory and practice},
+ publisher = {John Wiley & Sons, Ltd},
  year = {2019},
  address = {Hoboken, NJ, USA},
  isbn = {978-1-119-45479-3}
@@ -287,4 +287,18 @@ address = {San Francisco, CA, USA}
   author = {L. Grippo and F. Lampariello and S. Lucidi},
   title = {A truncated Newton method with nonmonotone line search for unconstrained optimization},
   journal = {Journal of Optimization Theory and Applications}
+}
+
+@article{Freudenstein1963,
+  doi = {10.1145/321186.321200},
+  url = {https://doi.org/10.1145/321186.321200},
+  year = {1963},
+  month = oct,
+  publisher = {Association for Computing Machinery ({ACM})},
+  volume = {10},
+  number = {4},
+  pages = {550--556},
+  author = {Ferdinand Freudenstein and Bernhard Roth},
+  title = {Numerical Solution of Systems of Nonlinear Equations},
+  journal = {Journal of the {ACM}}
 }
