--- a/inst/REFERENCES.bib
+++ b/inst/REFERENCES.bib
@@ -219,7 +219,7 @@ address = {San Francisco, CA, USA}
   url = {https://doi.org/10.1002/0471671746},
   year = {2003},
   month = may,
-  publisher = {John Wiley {\&} Sons,  Inc.},
+  publisher = {John Wiley {and} Sons,  Inc.},
   author = {Randy L. Haupt and Sue Ellen Haupt},
   title = {Practical Genetic Algorithms}
 }
@@ -227,7 +227,7 @@ address = {San Francisco, CA, USA}
 @Book{rao2019engineering,
  author = {Rao, Singiresu},
  title = {Engineering optimization : theory and practice},
- publisher = {John Wiley \& Sons, Ltd},
+ publisher = {John Wiley and Sons, Ltd},
  year = {2019},
  address = {Hoboken, NJ, USA},
  isbn = {978-1-119-45479-3}
@@ -252,7 +252,7 @@ address = {San Francisco, CA, USA}
   number={3},
   pages={209--217},
   year={1986},
-  publisher={Taylor \& Francis Group}
+  publisher={Taylor and Francis Group}
 }
 
 @Book{holland,
